# sicp-vm

./: .gitignore  README.md  pyproject.toml  scratch.ipynb  test_machine.py
src/: assembler.py  machine.py  register.py  stack.py
test/: test_assembler.py  test_machine.py  test_register.py  test_stack.py
