[project]
name = "sicp-vm"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage (>=7.10.1,<8.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "pylint (>=3.3.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks.test]
cmd = "pytest"


[tool.poe.tasks.coverage]
shell = """
coverage run -m pytest
coverage report
coverage html
"""

[tool.pylint.'MESSAGES CONTROL']
disable = """
    C0116,
    C0114,
    W0719,
    C0115
"""